--- a/css/styles.css
+++ b/css/styles.css
@@ -32,12 +32,18 @@ img{
     padding-top: 120px;
     padding-bottom: 120px;
 }
+.button{
+    font-family: inherit;
+    color: currentColor;
+}
+input{
+    font-family: inherit;
+}
 .header {
     border-bottom: 1px solid #e7e9fc;
     box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
         background: #fff;
 }
-
 .header-container{
     display: flex;
     align-items: center;
@@ -46,7 +52,6 @@ img{
     display: flex;
     align-items: center;
 }
-
 .link-logo {
     font-family: "Raleway", sans-serif;
         font-weight: 700;
@@ -57,7 +62,6 @@ img{
         color: #4d5ae5;
         margin-right: 76px;
 }
-
 .text-logo{
     font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -67,13 +71,11 @@ img{
     text-transform: uppercase;
     color: #2e2f42;
 }
-
 .navigation-list {
     display: flex;
     align-items: center;
     gap: 40px;
 }
-
 .navigation-item {
 }
 .active::after{
@@ -504,4 +506,290 @@ img{
 .footer-icon-link:hover,
 .footer-icon-link:focus {
     background-color: #31d0aa;
+}
+.footer-modal-container {
+    display: flex;
+        flex-direction: column;
+        margin-left: 80px;
+
+}
+
+.subscribe-title {
+    font-family: "Roboto", sans-serif;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #fff;
+        margin-bottom: 16px;
+}
+
+.footer-modal {
+    display: flex;
+}
+
+.footer-input {
+    border: 1px solid #fff;
+        border-radius: 4px;
+        width: 264px;
+        height: 40px;
+        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+        background-color: transparent;
+        padding: 8px 16px;
+        margin-right: 24px;
+
+}
+
+.footer-button {
+    border-radius: 4px;
+        padding: 8px 24px;
+        width: 165px;
+        height: 40px;
+        background: #4d5ae5;
+        font-family: "Roboto", sans-serif;
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 1.5;
+            letter-spacing: 0.04em;
+            text-align: center;
+            color: #fff;
+            padding: 8px 24px;
+            border: none;
+            display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: 16px;
+}
+.button-icon-footer{
+    fill: #fff;
+}
+.footer-input::placeholder{
+    font-family: "Roboto", sans-serif;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 2;
+        letter-spacing: 0.04em;
+        color: #fff;
+}
+/*---------------------------MODAL-------------------*/
+.modal-overlay {
+    position: fixed;
+    background-color: rgba(46, 47, 66, 0.4);
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 999;
+    opacity: 0;
+    pointer-events: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.modal-overlay.is-open{
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.modal {
+    max-width: 408px;
+    min-height: 584px;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+        background: #fcfcfc;
+        border-radius: 4px; 
+        padding: 24px 24px;
+}
+
+.form-modal {
+  
+}
+
+.form-title {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        text-align: center;
+        color: #2e2f42;
+        margin-bottom: 16px;
+}
+.icon-button{
+    display: block;
+    border: none;
+        width: 24px;
+        height: 24px;
+        border-radius: 100%;
+            fill: #e7e9fc;
+            margin-bottom: 24px;
+            margin-left: auto;
+            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+            transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+            
+}
+.icon-button:hover{
+        background-color: #404bbf;
+}
+.icon-close:hover{
+    fill: #fff;
+}
+.button-wrapper{
+    display: flex;
+    flex-direction: column;
+    
+}
+.icon-close{
+    fill: #2e2f42;
+}
+.input-container{
+    display: flex;
+        flex-direction: column;
+        margin-bottom: 8px;
+}
+.icon-modal-wrapper{
+    position: relative;
+}
+.icon-modal{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 16px;
+    fill: #2e2f42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.input-name {
+    border: 1px solid rgba(46, 47, 66, 0.4);
+        border-radius: 4px;
+        width: 360px;
+        height: 40px;
+        outline: transparent;
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        padding-left: 38px;
+        
+}
+.input-name:focus{
+    border-color: #4d5ae5;
+}
+.input-name:focus + .icon-modal{
+    fill: #4d5ae5;
+}
+.input-text {
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16667;
+        letter-spacing: 0.04em;
+        color: #8e8f99;
+        margin-bottom: 4px;
+}
+
+.textarea-name {
+    border: 1px solid rgba(46, 47, 66, 0.4);
+        border-radius: 4px;
+        width: 100%;
+        height: 120px;
+        resize: none;
+        padding: 8px 16px;
+        outline: transparent;
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.textarea-name:focus{
+    border-color: #4d5ae5;
+}
+.textarea-name::placeholder{
+    font-family: "Roboto", sans-serif;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16667;
+        letter-spacing: 0.04em;
+        color: rgba(46, 47, 66, 0.4);
+
+}
+.textarea-container{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 16px;
+
+}
+.textarea-text{
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16667;
+        letter-spacing: 0.04em;
+        color: #8e8f99;
+        margin-bottom: 4px;
+}
+.checkbox-form {
+   
+}
+
+.checkbox-privacy {
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16667;
+        letter-spacing: 0.04em;
+        color: #8e8f99;
+        display: flex;
+            align-items: center;
+            position: relative;
+}
+.checkbox-container{
+    border-radius: 4px;
+    width: 360px;
+    height: 16px;
+    margin-bottom: 24px;
+   
+}
+.checkbox-privacy span{
+    border-radius: 2px;
+        border: 1px solid rgba(46, 47, 66, 0.4);
+        margin-right: 8px;
+        width: 16px;
+        height: 16px;
+        fill: transparent;
+        display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.checkbox-form:checked + .checkbox-privacy span{
+    border-radius: 2px;
+        background-color: #404bbf;
+        border: none;
+        fill: #f4f4fd;
+}
+
+.button-form{
+    border-radius: 4px;
+    padding: 16px 32px;
+    width: 169px;
+    height: 56px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+        background: #4d5ae5;
+        border: none;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;  
+    margin: 0 auto;
+}
+.text-privacy{
+        line-height: 1.33;
+        text-decoration: underline;
+        text-decoration-skip-ink: none;
+        color: #4d5ae5;
+        font-family: "Roboto", sans-serif;
+            font-weight: 400;
+            font-size: 12px;
+            letter-spacing: 0.04em;
+            margin-left: 3px;
+           
 }
