--- a/css/styles.css
+++ b/css/styles.css
@@ -526,6 +526,7 @@ input{
 
 .footer-modal {
     display: flex;
+    gap 24px;
 }
 
 .footer-input {
@@ -535,8 +536,14 @@ input{
         height: 40px;
         box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
         background-color: transparent;
-        padding: 8px 16px;
         margin-right: 24px;
+        width: 264px;
+        height: 40px;
+        font-size: 12px;
+        line-height: 2;
+        letter-spacing: 0.04em;
+        padding-left: 16px;
+        color: #ffffff;
 
 }
 
@@ -559,9 +566,13 @@ input{
                 align-items: center;
                 justify-content: center;
                 gap: 16px;
+                min-width: 165px;
+                height: 40px;
+                cursor: pointer;
 }
 .button-icon-footer{
     fill: #fff;
+    margin-left: 16px;
 }
 .footer-input::placeholder{
     font-family: "Roboto", sans-serif;
@@ -585,6 +596,7 @@ input{
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-overlay.is-open{
     opacity: 1;
@@ -601,7 +613,7 @@ input{
 }
 
 .form-modal {
-  
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-title {
