--- a/css/styles.css
+++ b/css/styles.css
@@ -607,44 +607,44 @@ input{
     max-width: 408px;
     min-height: 584px;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
-        background: #fcfcfc;
-        border-radius: 4px; 
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.form-modal {
+    background: #fcfcfc;
+    border-radius: 4px; 
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 72px 24px 24px 24px;
 }
 
+.form-modal {
+    
+}
+
 .form-title {
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        text-align: center;
-        color: #2e2f42;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    margin-bottom: 16px;
 }
 .icon-button{
     display: flex;
-    border: none;
-        width: 24px;
-        height: 24px;
-        border-radius: 50%;
-            fill: #e7e9fc;
-            cursor: pointer;
-            justify-content: center;
-            align-items: center;
-            position: absolute;
-            top: 24px;
-            right: 24px;
-            padding: 0;
-            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-            
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: #e7e9fc;
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    padding: 0;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);         
 }
 .icon-button:hover{
-        background-color: #404bbf;
-        border: none;
+    background-color: #404bbf;
+    border: none;
 }
 .icon-button:focus {
     background-color: #404bbf;
@@ -662,31 +662,31 @@ input{
 }
 .input-container{
     display: flex;
-        flex-direction: column;
-        margin-bottom: 8px;
+    flex-direction: column;
+    margin-bottom: 8px;
 }
 .icon-modal-wrapper{
     position: relative;
 }
 .icon-modal{
     position: absolute;
+    left: 16px;
     top: 50%;
     transform: translateY(-50%);
     left: 16px;
     fill: #2e2f42;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .input-name {
     border: 1px solid rgba(46, 47, 66, 0.4);
-        border-radius: 4px;
-        width: 360px;
-        height: 40px;
-        outline: transparent;
-        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        padding-left: 38px;
-        
+    border-radius: 4px;
+    width: 100%;
+    height: 40px;
+    padding-left: 38px;
+    background-color: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    outline: transparent;
 }
 .input-name:focus{
     border-color: #4d5ae5;
@@ -695,12 +695,13 @@ input{
     fill: #4d5ae5;
 }
 .input-text {
-        font-weight: 400;
-        font-size: 12px;
-        line-height: 1.16667;
-        letter-spacing: 0.04em;
-        color: #8e8f99;
-        margin-bottom: 4px;
+    display: block;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    margin-bottom: 4px;
 }
 
 .textarea-name {
