--- a/css/styles.css
+++ b/css/styles.css
@@ -509,26 +509,25 @@ input{
 }
 .footer-modal-container {
     display: flex;
-        flex-direction: column;
-        margin-left: 80px;
+    flex-direction: column;
+    margin-left: 80px;
 
 }
 
 .subscribe-title {
     font-family: "Roboto", sans-serif;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #fff;
-        margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-bottom: 16px;
 }
 
 .footer-modal {
     display: flex;
-    gap 24px;
+    gap: 24px;
 }
-
 .footer-input {
     border: 1px solid #fff;
         border-radius: 4px;
@@ -677,7 +676,6 @@ input{
     fill: #2e2f42;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .input-name {
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
@@ -698,7 +696,7 @@ input{
     display: block;
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
     margin-bottom: 4px;
@@ -706,13 +704,18 @@ input{
 
 .textarea-name {
     border: 1px solid rgba(46, 47, 66, 0.4);
-        border-radius: 4px;
-        width: 100%;
-        height: 120px;
-        resize: none;
-        padding: 8px 16px;
-        outline: transparent;
-        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    background-color: transparent;
+    border-radius: 4px;
+    width: 100%;
+    height: 120px;
+    resize: none;
+    padding: 8px 16px;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .textarea-name:focus{
     border-color: #4d5ae5;
@@ -732,27 +735,18 @@ input{
     margin-bottom: 16px;
 
 }
-.textarea-text{
-        font-weight: 400;
-        font-size: 12px;
-        line-height: 1.16667;
-        letter-spacing: 0.04em;
-        color: #8e8f99;
-        margin-bottom: 4px;
-}
 .checkbox-form {
    
 }
-
 .checkbox-privacy {
-        font-weight: 400;
-        font-size: 12px;
-        line-height: 1.16667;
-        letter-spacing: 0.04em;
-        color: #8e8f99;
-        display: flex;
-            align-items: center;
-            position: relative;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    display: flex;
+    align-items: center;
+    position: relative;
 }
 .checkbox-container{
     border-radius: 4px;
@@ -763,34 +757,35 @@ input{
 }
 .checkbox-privacy span{
     border-radius: 2px;
-        border: 1px solid rgba(46, 47, 66, 0.4);
-        margin-right: 8px;
-        width: 16px;
-        height: 16px;
-        fill: transparent;
-        display: flex;
-            align-items: center;
-            justify-content: center;
-            transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    margin-right: 8px;
+    width: 16px;
+    height: 16px;
+    fill: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+   
 
 }
 
 .checkbox-form:checked + .checkbox-privacy span{
     border-radius: 2px;
-        background-color: #404bbf;
-        border: none;
-        fill: #f4f4fd;
+    background-color: #404bbf;
+    border: none;
+    fill: #f4f4fd;
 }
 
 .button-form{
+    display: block;
+    min-width: 169px;
     border-radius: 4px;
     padding: 16px 32px;
-    width: 169px;
-    height: 56px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-        background: #4d5ae5;
-        border: none;
+    background: #4d5ae5;
+    border: none;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -801,15 +796,17 @@ input{
     align-items: center;
     justify-content: center;  
     margin: 0 auto;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .text-privacy{
-        line-height: 1.33;
-        text-decoration: underline;
-        text-decoration-skip-ink: none;
-        color: #4d5ae5;
-        font-family: "Roboto", sans-serif;
-            font-weight: 400;
-            font-size: 12px;
-            letter-spacing: 0.04em;
-            margin-left: 3px;        
+    line-height: 1.33;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #4d5ae5;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    letter-spacing: 0.04em;
+    margin-left: 3px;        
 }
