--- a/css/styles.css
+++ b/css/styles.css
@@ -548,7 +548,6 @@ input{
 
 .footer-button {
     border-radius: 4px;
-        padding: 8px 24px;
         width: 165px;
         height: 40px;
         background: #4d5ae5;
@@ -564,13 +563,13 @@ input{
             display: flex;
                 align-items: center;
                 justify-content: center;
-                gap: 16px;
                 min-width: 165px;
                 height: 40px;
                 cursor: pointer;
 }
 .button-icon-footer{
     fill: #fff;
+    margin-left: 16px;
 }
 .footer-input::placeholder{
     font-family: "Roboto", sans-serif;
@@ -766,9 +765,6 @@ input{
     align-items: center;
     justify-content: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    display: inline-flex;
-   
-
 }
 
 .checkbox-form:checked + .checkbox-privacy span{
