--- a/css/styles.css
+++ b/css/styles.css
@@ -765,6 +765,7 @@ input{
     align-items: center;
     justify-content: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
 }
 
 .checkbox-form:checked + .checkbox-privacy span{
@@ -788,9 +789,6 @@ input{
     letter-spacing: 0.04em;
     text-align: center;
     color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;  
     margin: 0 auto;
     cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
